# TelegramBot

./: Cargo.toml
.github/.github/workflows/: bot.yaml
.github/workflows/: bot.yaml  rust.yaml
src/: dler.rs  lib.rs
templates/: dler_message.txt
