[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.14", default-features = false, features = ["derive", "std"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json"] }
serde = { version = "1", features = ["derive"] }
teloxide = { version = "0.16", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"

[features]
default = ["reqwest/native-tls", "teloxide/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "teloxide/rustls"]

[[bin]]
name = "bot"
path = "src/bin/bot.rs"
